--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,12 +43,12 @@ dev_dependencies:
 
 #  animations
   flutter_staggered_animations: any
-  backdrop: any
   url_launcher: any
   flutter_lints: ^2.0.0
   flip_card: ^0.6.0
 #  bottomnavibar
   bottom_navy_bar: ^6.0.0
+
 #  TextEditing
   flutter_markdown: any
   auto_size_text: any
@@ -80,6 +80,11 @@ dev_dependencies:
   animated_flip_counter: any
   awesome_dialog: any
   audioplayers: ^0.20.1
+  flutter_launcher_icons: ^0.9.2
+flutter_icons:
+    android: "launcher_icon"
+    ios: true
+    image_path: "assets/icon/"
 # The following section is specific to Flutter packages.
 flutter:
 
@@ -93,7 +98,10 @@ flutter:
     - assets/
     - assets/bookPng/
     - assets/music/s2.wav
-
+  fonts:
+    - family: Oswald
+      fonts:
+        - asset: fonts/Oswald-VariableFont_wght.ttf
 
 
 
